--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
 <meta charset="utf-8">
 
 <link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>HW3</title>
-	<style>
-
-	</style>
-
+	<title>Home work №3</title>
+	
 </head>
 <body>
   <div class="container">
   	<div class="header">
-  		<img src="img/logo.png" align="left" border="none">
+  		<img src="img/logo.png" alt="logo">
   	</div>
   	    <ul class="top_menu">
   		   <li><a href="">Главная</a></li>
@@ -32,7 +29,7 @@
   			<li><a href=""> Автотовары</a></li>
   		</ul>
 <div class="image">
-	<img src="img/foto1.jpg">
+	<img src="img/foto1.jpg" alt="">
 </div>
 <p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
 
@@ -43,7 +40,7 @@
             <li><a href="">Товары</a></li>
             <li><a href=""> О_нас</a></li>
             <li><a href=""> Контакты</a></li>
-            <li>2014 All &#169 rights reserved</li>
+            <li>2014 All &#169;rights reserved</li>
         </ul>
       </div>
   </div>
